# nas-game

./: .gitignore  Cargo.toml  README.md  TODO.md  dev.nix  game_library.ron  package-lock.json  package.json  pnpm-lock.yaml  server_settings.ron  tmux.sh  vite.config.js
requests/: add_game.sh  default-get-request-dummy.sh  default-get-request.sh  save_library.sh
src/: App.css  App.jsx  Library.jsx  LibraryItem.jsx  LibrarySearch.css  LibrarySearch.jsx  Overview.jsx  Screenshots.jsx  Settings.jsx  TopMenu.css  TopMenu.jsx  error.rs  index.jsx  main.rs  server.rs
src-tauri/: Cargo.toml  game_library.json  game_library.ron  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/requests/: add_game.sh  download_images_server_side.sh  example-post-request.sh  games.json  optimize_images_server.sh
src-tauri/server/: server_settings.json
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  server.rs  server_routes.rs  types.rs
src/components/: LibraryItem.jsx  LibrarySearch.css  TopMenu.css  TopMenu.jsx
src/store/: GamesStore.jsx
