[package]
name = "nas-game"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nas_game_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Default from tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive", "serde_derive"] }
serde_json = "1"



toml = "0.8.22"
actix-web = "4"
clap = "4.5.38"
ron = "0.8"
# serde = { version = "1.0.219", features = ["derive", "serde_derive"] }


# log
colored = "2"
chrono = "0.4.38"
tauri-plugin-fs = "2"
image = "0.25.6"
webp = "0.3.0"
steamgriddb_api = "0.3.1"
reqwest = "0.12.15"

